Algunas mejoras no importantes
